source/datahub/main/default/objects/ErrorCodeConfiguration__mdt/fields/Description_de_DE__c.field-meta.xml
<CustomField>
    <fullName>Description_de_DE__c</fullName>
    <label>Description Deutsch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>