source/datahub/main/default/objects/ErrorCodeConfiguration__mdt/fields/Description_en_GB__c.field-meta.xml
<CustomField>
    <fullName>Description_en_GB__c</fullName>
    <label>Description English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>