source/datahub/main/default/objects/ErrorCodeConfiguration__mdt/fields/Description_nl_NL__c.field-meta.xml
<CustomField>
    <fullName>Description_nl_NL__c</fullName>
    <label>Description Dutch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>